[package]
name = "finchers-codegen"
version = "0.1.0-alpha.1"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/finchers-rs/finchers.git"
homepage = "https://finchers-rs.github.io"
documentation = "https://docs.rs/finchers-codegen"
description = """
Custom derive for Finchers
"""
publish = false

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = { version = "0.15.4", features = ["full", "extra-traits"] }
quote = "0.6.8"
proc-macro2 = "0.4.19"
